FEAT: update SecurityConfig with role-based access for DELETE /api/users and refine CORS headers configuration